written conclusions, added related work, added acknowledgment and dedication

--- a/biblio.bib
+++ b/biblio.bib
@@ -427,3 +427,13 @@ publisher = {Institute of Electrical and Electronics Engineers Inc.}
   year={2015},
   organization={Springer}
 }
+
+@misc{elgamal2023carbon,
+      title={Design Space Exploration and Optimization for Carbon-Efficient Extended Reality Systems}, 
+      author={Mariam Elgamal and Doug Carmean and Elnaz Ansari and Okay Zed and Ramesh Peri and Srilatha Manne and Udit Gupta and Gu-Yeon Wei and David Brooks and Gage Hills and Carole-Jean Wu},
+      year={2023},
+      eprint={2305.01831},
+      archivePrefix={arXiv},
+      primaryClass={cs.AR},
+      url={https://arxiv.org/abs/2305.01831}, 
+}
